--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -93,7 +93,7 @@
       <artifactId>event-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -106,6 +106,14 @@
 	  <version>1.8.1</version> 
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>event-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 
 </project>
