Unit tests added. for view model.
git-svn-id: http://chianti.ucsd.edu/svn@21423 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/viewmodel-api/trunk/pom.xml
+++ b/core3/viewmodel-api/trunk/pom.xml
@@ -126,7 +126,7 @@
 		<!-- unit tests -->
 		<dependency>
 			<groupId>org.easymock</groupId>
-			<artifactId>com.springsource.org.easymock</artifactId>
+			<artifactId>easymock</artifactId>
 			<version>${easymock.version}</version>
 			<scope>test</scope>
 		</dependency>
