--- a/core3/io-api/trunk/pom.xml
+++ b/core3/io-api/trunk/pom.xml
@@ -92,6 +92,16 @@
 			<artifactId>presentation-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+        	<groupId>org.cytoscape</groupId>
+      		<artifactId>vizmap-api</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+       </dependency>
+       <dependency>
+      		<groupId>org.cytoscape</groupId>
+      		<artifactId>work-api</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    		</dependency>
 	</dependencies>
 
 </project>
