--- a/core3/session-impl/trunk/pom.xml
+++ b/core3/session-impl/trunk/pom.xml
@@ -106,6 +106,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>event-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
