--- a/cytoscape3/trunk/application/pom.xml
+++ b/cytoscape3/trunk/application/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>swing-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>service-util</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 	<build>
