added property that should get rid of most MacRoman errors
git-svn-id: http://chianti.ucsd.edu/svn@21462 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -17,8 +17,8 @@
 		<spring.osgi.version>1.2.1</spring.osgi.version>
 		<junit.version>4.8.1</junit.version>
 		<easymock.version>3.0</easymock.version>
-
 		<maven-bundle-plugin.version>2.1.0</maven-bundle-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<distributionManagement>
