--- a/core3/viewmodel-impl/trunk/pom.xml
+++ b/core3/viewmodel-impl/trunk/pom.xml
@@ -51,10 +51,31 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>add-test-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${basedir}/src/integration/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.6</version>
 				<configuration>
+					<testSourceDirectory>${basedir}/src/integration/java</testSourceDirectory>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 				</configuration>
 				<executions>
