--- a/core3/viewmodel-api/trunk/pom.xml
+++ b/core3/viewmodel-api/trunk/pom.xml
@@ -19,7 +19,7 @@
 	<artifactId>viewmodel-api</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>${bundle.symbolicName}</name>
+	<name>${bundle.symbolicName} (View Model API Bundle)</name>
 
 	<packaging>bundle</packaging>
 
