--- a/cytoscape3/trunk/application/pom.xml
+++ b/cytoscape3/trunk/application/pom.xml
@@ -106,7 +106,11 @@
 			<artifactId>service-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.ops4j.pax.logging</groupId>
+			<artifactId>pax-logging-api</artifactId>
+			<version>1.5.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
