--- a/cytoscape3/trunk/configurations/services/org.ops4j.pax.logging.properties
+++ b/cytoscape3/trunk/configurations/services/org.ops4j.pax.logging.properties
@@ -3,7 +3,7 @@
 
 # The following specifies that log messages are sent to the Console and
 # status bar
-log4j.rootLogger=ALL, osgi:OrgCytoscapeLogSwingAdvancedAppender, osgi:OrgCytoscapeLogSwingSimpleAppender, osgi:OrgCytoscapeLogSwingStatusBarAppender
+log4j.rootLogger=ALL, stdout, osgi:OrgCytoscapeLogSwingAdvancedAppender, osgi:OrgCytoscapeLogSwingSimpleAppender, osgi:OrgCytoscapeLogSwingStatusBarAppender
 
 #
 # Log messages from the standard library classes, JVM-specific 
@@ -22,6 +22,11 @@ log4j.appender.file.threshold=INFO
 log4j.appender.file.File=framework-cytoscape.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout.ConversionPattern=%t %p [%c] - %m%n
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.threshold=INFO
 
 
 log4j.logger.java=NONE,file
