fixed problem with properties
git-svn-id: http://chianti.ucsd.edu/svn@21519 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -231,6 +231,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>property</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>test-support</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
