added support for data tables
git-svn-id: http://chianti.ucsd.edu/svn@21536 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -47,6 +47,12 @@
       <version>1.0-SNAPSHOT</version>
       <type>test-jar</type>
     </dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>event-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>test-jar</type>
+    </dependency>
 	<!-- the APIs we're supporting - these should remain relatively static -->
     <dependency>
       <groupId>org.cytoscape</groupId>
