--- a/core3/work-swing-api/trunk/pom.xml
+++ b/core3/work-swing-api/trunk/pom.xml
@@ -10,13 +10,13 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.work-swing-impl</bundle.symbolicName>
+		<bundle.symbolicName>org.cytoscape.work-swing-api</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.work</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>work-swing-impl</artifactId>
+	<artifactId>work-swing-api</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
@@ -118,22 +118,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>work-swing-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
 			<artifactId>work-spring-hack</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>cytoscape</groupId>
-			<artifactId>application</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
