--- a/cytoscape3/trunk/application/pom.xml
+++ b/cytoscape3/trunk/application/pom.xml
@@ -58,6 +58,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>work-swing-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
