--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -213,6 +213,20 @@
 			<artifactId>com.springsource.org.apache.commons.collections</artifactId>  
 			<version>3.2.1</version> 
 		</dependency>
+
+		<!-- Simplified Plugin Support -->
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>plugin-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>plugin-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- A utility that allows you to register services dynamically -->
 		<dependency>
 			<groupId>org.cytoscape</groupId>
