Incomplete implementation of edge-weighted option for the ForceDirectedLayout--it lacks some other options and documentation.
git-svn-id: http://chianti.ucsd.edu/svn@21606 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/build.xml
+++ b/cytoscapeweb/trunk/cytoscapeweb/build.xml
@@ -47,7 +47,7 @@
         </mxmlc>
     </target>
     
-    <target name="js minify">
+    <target name="js minify" depends="copy resources to bin">
         <apply executable="java" parallel="false" failonerror="true">
             <fileset dir="${js.src.dir}" includes="cytoscapeweb.js AC_OETags.js json2.js"/>
             <arg line="-jar"/>
