fixed biopax repository problem
git-svn-id: http://chianti.ucsd.edu/svn@21612 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -116,6 +116,28 @@
           <name>Cytoscape Third Party</name>
           <url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
        </repository>
+       <repository>
+          <id>cytoscape_biopax_release</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape BioPAX Release Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/biopax-release/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_biopax_snapshot</id>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <name>Cytoscape BioPAX Snapshot Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/biopax-snapshot/</url>
+       </repository>
   </repositories>
 
   <distributionManagement>
