added core commands to parent pom
git-svn-id: http://chianti.ucsd.edu/svn@21613 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -34,6 +34,7 @@
     <module>cPath2</module>
     <module>filters</module>
     <module>linkout</module>
+    <module>CoreCommands</module>
   </modules>
 
   <build>
