--- a/coreplugins/trunk/CoreCommands/pom.xml
+++ b/coreplugins/trunk/CoreCommands/pom.xml
@@ -9,7 +9,7 @@
     <version>2.8.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>coreCommands</artifactId>
+  <artifactId>core-commands</artifactId>
   <packaging>jar</packaging>
 
   <name>Core Commands Plugin</name>
