added preliminary support for install4j
git-svn-id: http://chianti.ucsd.edu/svn@21614 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -10,15 +10,42 @@
   <packaging>jar</packaging>
   <name>Cytoscape Distribution</name>
 
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>googlecode-maven-install4j</id>
+      <name>googlecode-maven-install4j</name>
+      <url>http://maven-install4j.googlecode.com/svn/m2-repo</url>
+    </pluginRepository>
+  </pluginRepositories>
+
  
   <build>
    <plugins>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <goals>assembly:assembly install4j:compile</goals>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
         <descriptors>
           <descriptor>src/main/assembly/src.xml</descriptor>
         </descriptors>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-install4j</groupId>
+        <artifactId>maven-install4j-plugin</artifactId>
+        <version>0.1.1</version>
+        <configuration>
+          <executable>/Applications/install4j 4/bin/install4jc</executable>
+          <configFile>${basedir}/src/main/install4j/Cytoscape.install4j</configFile>
+          <releaseId>${project.version}</releaseId>
+          <attach>true</attach>
+          <skipOnMissingExecutable>true</skipOnMissingExecutable>
         </configuration>
       </plugin>
     </plugins>
