--- a/corelibs/trunk/pom.xml
+++ b/corelibs/trunk/pom.xml
@@ -37,6 +37,17 @@
   </modules>
 
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/corelibs/tags</tagBase>
+        </configuration>
+      </plugin>
+    </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -115,6 +126,14 @@
       <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/corelibs/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/corelibs/trunk</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://chianti.ucsd.edu/svn/corelibs/trunk</url>
+  </scm>
+
 
 </project>
 
