--- a/corelibs/trunk/graph.dynamic/pom.xml
+++ b/corelibs/trunk/graph.dynamic/pom.xml
@@ -18,12 +18,12 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>util-intr</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>graph-fixed</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
   </dependencies>
 
