--- a/corelibs/trunk/fing/pom.xml
+++ b/corelibs/trunk/fing/pom.xml
@@ -18,22 +18,22 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>util-intr</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>graph-dynamic</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>graph-fixed</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>giny</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
   </dependencies>
 
