changes to support the maven release plugin
git-svn-id: http://chianti.ucsd.edu/svn@21618 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/ManualLayout/pom.xml
+++ b/coreplugins/trunk/ManualLayout/pom.xml
@@ -26,13 +26,13 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>${coreplugins.version}</version>
+      <version>${version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>nerius-math-xform</artifactId>
-      <version>${coreplugins.version}</version>
+      <version>${version}</version>
     </dependency>
   </dependencies>
 
