--- a/coreplugins/trunk/BioMartClient/pom.xml
+++ b/coreplugins/trunk/BioMartClient/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>${coreplugins.version}</version>
+      <version>${version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
