--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -11,7 +11,6 @@
   <name>Cytoscape Core Plugins Parent POM</name>
 
   <properties>
-    <coreplugins.version>2.8.0-SNAPSHOT</coreplugins.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
  
@@ -38,6 +37,18 @@
   </modules>
 
   <build>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/coreplugins/tags</tagBase>
+        </configuration>
+      </plugin>
+    </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -162,5 +173,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/coreplugins/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/coreplugins/trunk</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://chianti.ucsd.edu/svn/coreplugins/trunk</url>
+  </scm>
+
 </project>
 
