--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -167,6 +167,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>cytoscape</groupId>
+      <artifactId>application</artifactId>
+      <version>${version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
